bin_PROGRAMS = hadl

hadl_LDADD = $(LIBJSONCPP_LIBS) $(LIBSIGC_LIBS) 
hadl_CPPFLAGS = $(LIBJSONCPP_CFLAGS) $(LIBSIGC_CFLAGS) -std=c++0x


hadl_SOURCES = 	src/main.cpp \
				src/api/ConnectableElement.cpp \
				src/api/Component.hpp \
				src/api/PortConfigProvided.hpp \
				src/api/Configuration.hpp \
				src/api/PortConfigRequired.hpp \
				src/api/Connector.hpp \
				src/api/RoleConfig.hpp \
				src/api/Element.hpp \
				src/api/RoleConfigProvided.hpp \
				src/api/InterfaceComposant.hpp \
				src/api/RoleConfigRequired.hpp \
				src/api/InterfaceConfiguration.hpp \
				src/api/Role.hpp \
				src/api/InterfaceConnector.hpp \
				src/api/RoleProvided.hpp \
				src/api/Interface.hpp \
				src/api/RoleRequired.hpp \
				src/api/PortComposant.hpp \
				src/api/Service.hpp \
				src/api/PortComposantProvided.hpp \
				src/api/ServiceProvided.hpp \
				src/api/PortComposantRequired.hpp \
				src/api/ServiceRequired.hpp \
				src/api/PortConfig.hpp
