bin_PROGRAMS = hadl

hadl_LDADD = $(LIBJSONCPP_LIBS) $(LIBSIGC_LIBS) 
hadl_CPPFLAGS = $(LIBJSONCPP_CFLAGS) $(LIBSIGC_CFLAGS)


hadl_SOURCES = 	src/main.cpp \
				src/api/PortConfigProvided.cpp \
				src/api/Configuration.cpp \
				src/api/ConnectableElement.cpp \
				src/api/Component.cpp \
				src/api/PortConfigRequired.cpp \
				src/api/Connector.cpp \
				src/api/RoleConfig.cpp \
				src/api/Element.cpp \
				src/api/RoleConfigProvided.cpp \
				src/api/InterfaceComposant.cpp \
				src/api/RoleConfigRequired.cpp \
				src/api/InterfaceConfiguration.cpp \
				src/api/Role.cpp \
				src/api/InterfaceConnector.cpp \
				src/api/RoleProvided.cpp \
				src/api/Interface.cpp \
				src/api/RoleRequired.cpp \
				src/api/PortComposant.cpp \
				src/api/Service.cpp \
				src/api/PortComposantProvided.cpp \
				src/api/ServiceProvided.cpp \
				src/api/PortComposantRequired.cpp \
				src/api/ServiceRequired.cpp \
				src/api/PortConfig.cpp
