#bin_PROGRAMS = hadlapi
lib_LTLIBRARIES = libhadl.la

libhadl_la_LIBADD = $(LIBJSONCPP_LIBS) $(LIBSIGC_LIBS) 
libhadl_la_CPPFLAGS = $(LIBJSONCPP_CFLAGS) $(LIBSIGC_CFLAGS)


libhadl_la_SOURCES = 	PortConfigProvided.cpp PortConfigProvided.hpp \
				Configuration.cpp Configuration.hpp \
				ConnectableElement.cpp ConnectableElement.hpp \
				Component.cpp Component.hpp \
				PortConfigRequired.cpp PortConfigRequired.hpp \
				Connector.cpp Connector.hpp \
				RoleConfig.cpp RoleConfig.hpp \
				Element.cpp Element.hpp \
				RoleConfigProvided.cpp RoleConfigProvided.hpp \
				InterfaceComposant.cpp InterfaceComposant.hpp \
				RoleConfigRequired.cpp RoleConfigRequired.hpp \
				InterfaceConfiguration.cpp InterfaceConfiguration.hpp \
				Role.cpp Role.hpp \
				InterfaceConnector.cpp InterfaceConnector.hpp \
				RoleProvided.cpp RoleProvided.hpp \
				Interface.cpp Interface.hpp \
				RoleRequired.cpp RoleRequired.hpp \
				PortComposant.cpp PortComposant.hpp \
				Service.cpp Service.hpp \
				PortComposantProvided.cpp PortComposantProvided.hpp \
				ServiceProvided.cpp ServiceProvided.hpp \
				PortComposantRequired.cpp PortComposantRequired.hpp \
				ServiceRequired.cpp ServiceRequired.hpp \
				PortConfig.cpp PortConfih.hpp
